Feat : 커스텀 바인딩 어댑터 생성
- Live Data 가시성 설정

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -438,7 +438,7 @@
                                 android:layout_marginStart="10dp"
                                 android:text="아침"
                                 android:textColor="@color/text_black"
-                                android:textSize="18dp"
+                                android:textSize="18sp"
                                 android:textStyle="bold"
                                 app:layout_constraintBottom_toTopOf="@+id/tvBreakfastCalories"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -451,7 +451,7 @@
                                 android:layout_marginStart="10dp"
                                 android:text='@{"섭취 칼로리: " + viewModel.breakfastNutrients.calories + "kcal"}'
                                 android:textColor="@color/text_gray"
-                                android:textSize="14dp"
+                                android:textSize="14sp"
                                 app:layout_constraintBottom_toTopOf="@+id/breakfastList"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -463,8 +463,8 @@
                                 android:layout_marginStart="10dp"
                                 android:ellipsize="end"
                                 android:maxLines="1"
-                                android:text="@{viewModel.breakfastFoodNames}"
-                                android:textSize="14dp"
+                                app:textOrGone="@{viewModel.breakfastFoodNames}"
+                                android:textSize="14sp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toBottomOf="@+id/tvBreakfastCalories" />
@@ -517,7 +517,7 @@
                                 android:layout_marginStart="10dp"
                                 android:ellipsize="end"
                                 android:maxLines="1"
-                                android:text="@{viewModel.lunchFoodNames}"
+                                app:textOrGone="@{viewModel.lunchFoodNames}"
                                 android:textSize="14dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -572,7 +572,7 @@
                                 android:layout_marginStart="10dp"
                                 android:ellipsize="end"
                                 android:maxLines="1"
-                                android:text="@{viewModel.dinnerFoodNames}"
+                                app:textOrGone="@{viewModel.dinnerFoodNames}"
                                 android:textSize="14dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -628,7 +628,7 @@
                                 android:layout_marginStart="10dp"
                                 android:ellipsize="end"
                                 android:maxLines="1"
-                                android:text="@{viewModel.snackFoodNames}"
+                                app:textOrGone="@{viewModel.snackFoodNames}"
                                 android:textSize="14dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
