Style : 스타일 수정

--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -312,7 +312,6 @@
                     android:layout_marginBottom="30dp"
                     android:background="@drawable/border_section_light_green"
                     android:text="추가하기"
-                    android:textColor="@color/text_black"
                     android:visibility="@{viewModel.isSaveButtonVisible ? android.view.View.VISIBLE : android.view.View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -329,6 +328,20 @@
                     android:background="@drawable/border_section_light_green"
                     android:text="저장하기"
                     android:visibility="@{viewModel.isUpdateButtonVisible ? android.view.View.VISIBLE : android.view.View.GONE}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnAddFromLibrary"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:background="@drawable/border_section_light_green"
+                    android:text="저장하기"
+                    android:visibility="@{viewModel.isAddFromLibraryButtonVisible() ? android.view.View.VISIBLE : android.view.View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
