--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -155,6 +155,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
+                android:paddingStart="20sp"
                 android:textColor="@color/black"
                 app:backgroundTint="@color/light_green"
                 app:layout_constraintBottom_toBottomOf="parent"
