--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -144,12 +144,12 @@
                     android:gravity="center|start"
                     android:maxLines="12"
                     android:paddingStart="20dp"
-                    android:text="작성된 메모가 없습니다"
                     android:textColor="@color/text_black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+                    app:layout_constraintTop_toBottomOf="@+id/calendarView"
+                    tools:ignore="RtlSymmetry" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
