--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,12 +6,12 @@
         android:title="@string/title_home" />
     <item
         android:id="@+id/navigation_diet"
-        android:icon="@drawable/ic_diet"
+        android:icon="@drawable/ic_meal"
         android:title="@string/title_diet" />
     <item
-        android:id="@+id/navigation_exercise"
-        android:icon="@drawable/ic_exercise"
-        android:title="@string/title_exercise" />
+        android:id="@+id/navigation_report"
+        android:icon="@drawable/ic_report"
+        android:title="@string/title_report" />
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_profile"
