--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
         <item name="colorPrimaryDark">@color/text_dark_blue</item>
         <item name="colorAccent">@color/accent_red</item>
         <item name="textInputStyle">@style/Widget.MyApp.TextInputLayout</item>
+        <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
 
@@ -38,5 +39,12 @@
     <style name="MyApp.TextInputLayout.Hint" parent="TextAppearance.MaterialComponents.Caption">
         <item name="android:textColor">@color/customHintColor</item>
         <item name="android:textSize">12sp</item>
+    </style>
+
+
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
