Fix : 체크박스 UX 개선

--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -95,9 +95,9 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/chartCardView"
                     android:layout_width="0dp"
-                    android:layout_height="300dp"
+                    android:layout_height="330dp"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="100dp"
+                    android:layout_marginTop="80dp"
                     android:layout_marginEnd="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -106,6 +106,7 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:padding="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
