Feat : 사용자 설정 및 즐겨찾기 정렬

--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -311,7 +311,7 @@
                     android:layout_marginEnd="30dp"
                     android:layout_marginBottom="30dp"
                     android:background="@drawable/border_section_light_green"
-                    android:text="추가하기"
+                    android:text="@string/addFood"
                     android:visibility="@{viewModel.isSaveButtonVisible ? android.view.View.VISIBLE : android.view.View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -326,7 +326,7 @@
                     android:layout_marginEnd="30dp"
                     android:layout_marginBottom="30dp"
                     android:background="@drawable/border_section_light_green"
-                    android:text="업데이트"
+                    android:text="@string/servingSizeUpdate"
                     android:visibility="@{viewModel.isUpdateButtonVisible ? android.view.View.VISIBLE : android.view.View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -340,7 +340,7 @@
                     android:layout_marginEnd="30dp"
                     android:layout_marginBottom="30dp"
                     android:background="@drawable/border_section_light_green"
-                    android:text="저장하기"
+                    android:text="@string/addToMeal"
                     android:visibility="@{viewModel.isAddFromLibraryButtonVisible() ? android.view.View.VISIBLE : android.view.View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
