--- a/app/src/main/res/layout/item_phi_chart_food.xml
+++ b/app/src/main/res/layout/item_phi_chart_food.xml
@@ -14,14 +14,17 @@
 
         <TextView
             android:id="@+id/foodName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="Food Name"
             android:textColor="@color/text_black"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/foodQuantity"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
