Feat : 실행취소 구현 및 디자인 수정

--- a/app/src/main/res/layout/fragment_custom_add.xml
+++ b/app/src/main/res/layout/fragment_custom_add.xml
@@ -45,8 +45,9 @@
                     android:id="@+id/textView25"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="음식 추가하기"
-                    android:textSize="18dp"
+                    android:text="@string/custom_add_food"
+                    android:textColor="@color/text_black"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_anchor="@+id/appBarLayout2"
                     app:layout_anchorGravity="center"
@@ -111,7 +112,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
                         android:layout_marginBottom="20dp"
-                        android:text="음식을 자유롭게 추가하세요"
+                        android:text="@string/custom_add_food_info"
                         android:textColor="@color/text_gray"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -140,7 +141,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="5dp"
                     android:background="@android:color/transparent"
-                    android:hint="이름"
+                    android:hint="@string/name"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
@@ -168,7 +169,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="5dp"
                     android:background="@android:color/transparent"
-                    android:hint="기본 제공량(g)"
+                    android:hint="@string/serving_size_g"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
@@ -196,7 +197,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="5dp"
                     android:background="@android:color/transparent"
-                    android:hint="열량(g)"
+                    android:hint="@string/calorie_kcal"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
@@ -224,7 +225,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="5dp"
                     android:background="@android:color/transparent"
-                    android:hint="탄수화물(g)"
+                    android:hint="@string/carb_g"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
@@ -252,7 +253,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="5dp"
                     android:background="@android:color/transparent"
-                    android:hint="단백질(g)"
+                    android:hint="@string/protein_g"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
@@ -280,7 +281,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="250dp"
                     android:background="@android:color/transparent"
-                    android:hint="지방(g)"
+                    android:hint="@string/fat_g"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
@@ -308,7 +309,7 @@
                     android:layout_marginBottom="20dp"
                     android:elevation="6dp"
                     android:gravity="center"
-                    android:text="저장하기"
+                    android:text="@string/add"
                     android:textColor="@color/text_black"
                     android:translationZ="12dp"
                     app:backgroundTint="@color/light_green"
