Refactor : checkBox와 FavoriteBtn 가시성 재설정 및 리팩토링

--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -84,6 +84,21 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <ImageButton
+                        android:id="@+id/favoriteBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:background="@android:color/transparent"
+                        android:contentDescription="@string/favorite"
+                        android:src="@drawable/ic_star_border"
+                        app:srcCompat="@{viewModel.isFavorite}"
+                        android:visibility="visible"
+                        app:layout_constraintBottom_toBottomOf="@+id/foodName"
+                        app:layout_constraintStart_toEndOf="@+id/foodName"
+                        app:layout_constraintTop_toTopOf="@+id/foodName" />
+
+
                     <View
                         android:id="@+id/view"
                         android:layout_width="match_parent"
